add back button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="xlarge">XL</string>
     <string name="xxlarge">XXL</string>
     <string name="userInfo">User info</string>
+    <string name="back">Back</string>
 </resources>
