add statistic activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_battle_field">BattleFieldActivity</string>
     <string name="title_activity_rooms">RoomsActivity</string>
-    <string name="your_name">Your name</string>
-    <string name="_4x4">4x4</string>
-    <string name="_6x6">6x6</string>
     <string name="create">create</string>
     <string name="title_activity_room_battle_field">RoomBattleFieldActivity</string>
     <string name="stepCount">Step</string>
@@ -29,4 +26,7 @@
     <string name="xxlarge">XXL</string>
     <string name="userInfo">User info</string>
     <string name="back">Back</string>
+    <string name="hour">Hour</string>
+    <string name="day">Day</string>
+    <string name="all">All</string>
 </resources>
