--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="hour">Hour</string>
     <string name="day">Day</string>
     <string name="all">All</string>
+    <string name="title_activity_user_info">UserInfoActivity</string>
+    <string name="apply_button">Apply</string>
+    <string name="user_name">User name:</string>
+    <string name="user_country">Country:</string>
 </resources>
