--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="title_activity_rooms">RoomsActivity</string>
     <string name="create">create</string>
     <string name="title_activity_room_battle_field">RoomBattleFieldActivity</string>
-    <string name="stepCount">Step</string>
-    <string name="score">Score</string>
-    <string name="record">Record</string>
-    <string name="time">Time</string>
+    <string name="step">Step:</string>
+    <string name="score">Score:</string>
+    <string name="record">Record:</string>
+    <string name="time">Time:</string>
     <string name="restart">Restart</string>
     <string name="play">Play</string>
     <string name="multiplayer">Multiplayer</string>
@@ -33,4 +33,7 @@
     <string name="apply_button">Apply</string>
     <string name="user_name">User name:</string>
     <string name="user_country">Country:</string>
+    <string name="title_activity_end_of_game">EndOfGameActivity</string>
+    <string name="congratulations">Congratulations!</string>
+    <string name="home">Home</string>
 </resources>
