--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="normal">Normal</string>
     <string name="hard">Hard</string>
     <string name="veryhard">Very hard</string>
+    <string name="learninfo">Learn info</string>
 </resources>
